Diverse Verbesserungen
