# server/internal/article/article.go
@@ -2,6 +2,7 @@ package article
 
 import (
 	"fmt"
+	"path/filepath"
 
 	"musenova.de/filefinder/internal/config"
 	fshelper "musenova.de/filefinder/internal/fs-helper"
@@ -14,8 +15,25 @@ func GetArticle(config config.AppConfig, number string) (gen.Article, error) {
 		return gen.Article{}, fmt.Errorf("no article with number %v found", number)
 	}
 	files, hasData := fshelper.AnalyseDirectory(config, number, path)
-	if !hasData {
+
+	uploadPath, err := fshelper.GetUploadFolder(config, number)
+	if err != nil {
 		return gen.Article{}, fmt.Errorf("no article with number %v found", number)
+	}
+
+	uploadFiles, hasUploadData := fshelper.AnalyseDirectory(config, number, uploadPath)
+
+	if !hasData && !hasUploadData {
+		return gen.Article{}, fmt.Errorf("no article with number %v found", number)
+	}
+	if hasUploadData {
+		uploadName := "UPLOAD"
+		uploadType := gen.Folder
+		files = append(files, gen.FileSystem{
+			Name:     &uploadName,
+			Type:     &uploadType,
+			Children: &uploadFiles,
+		})
 	}
 	return gen.Article{
 		Number: &number,
@@ -23,14 +41,20 @@ func GetArticle(config config.AppConfig, number string) (gen.Article, error) {
 	}, nil
 }
 
-func GetDefaultFilePath(config config.AppConfig, number string) (string, error) {
+func GetDefaultArticleFiles(config config.AppConfig, number string) (gen.Article, error) {
 	path, err := fshelper.GetFilePath(config, number)
 	if err != nil {
-		return "", fmt.Errorf("no article with number %v found", number)
+		return gen.Article{}, fmt.Errorf("no article with number %v found", number)
 	}
-	path, hasData := fshelper.GetDefaultFile(config, number, path)
+	path = filepath.Join(path, "PDU")
+	files, hasData := fshelper.AnalyseDirectoryFlat(config, number, path)
+
 	if !hasData {
-		return "", fmt.Errorf("no article with number %v found", number)
+		return gen.Article{}, fmt.Errorf("no article with number %v found", number)
 	}
-	return path, nil
+
+	return gen.Article{
+		Number: &number,
+		Files:  &files,
+	}, nil
 }
