# server/internal/fs-helper/fs-helper.go
@@ -6,7 +6,6 @@ import (
 	"io"
 	"io/fs"
 	"log"
-	"mime/multipart"
 	"os"
 	"path/filepath"
 	"strings"
@@ -59,7 +58,37 @@ func AnalyseDirectory(config config.AppConfig, article string, path string) (dir
 	return directory, len(directory) > 0
 }
 
-func GetDefaultFile(config config.AppConfig, article string, path string) (file string, hasData bool) {
+func AnalyseDirectoryFlat(config config.AppConfig, article string, path string) (directory []gen.FileSystem, hasData bool) {
+	directory = make([]gen.FileSystem, 0)
+
+	files, err := os.ReadDir(path)
+	if err != nil {
+		log.Printf("Der Pfad %v konnte nicht gelesen werden.\n%v", path, err)
+		hasData = false
+		return directory, false
+	}
+
+	for _, fi := range files {
+		if fi.IsDir() {
+
+			continue
+		}
+		if validator.IsPDFFile(fi) {
+			fileName := fi.Name()
+			fileType := gen.File
+			relativePath, _ := getRelativePath(config, article, path, fi)
+
+			current := gen.FileSystem{}
+			current.Name = &fileName
+			current.Type = &fileType
+			current.Path = &relativePath
+			directory = append(directory, current)
+		}
+	}
+	return directory, len(directory) > 0
+}
+
+func GetDefaultFile(config config.AppConfig, article string, path string, validParent bool) (file string, hasData bool) {
 
 	files, err := os.ReadDir(path)
 	if err != nil {
@@ -69,36 +98,20 @@ func GetDefaultFile(config config.AppConfig, article string, path string) (file 
 	}
 
 	for _, fi := range files {
-		if validator.IsAllowedDir(config, fi) {
-
-			result, ok := GetDefaultFile(config, article, filepath.Join(path, fi.Name()))
-			if ok {
-				return result, ok
+		if fi.IsDir() {
+			if fi.Name() != "PDU" {
+				continue
 			}
-			continue
+			return GetDefaultFile(config, article, filepath.Join(path, fi.Name()), true)
 		}
-		if validator.IsAllowedFile(config, fi) {
+		if validParent && validator.IsPDFFile(fi) {
 			return filepath.Join(path, fi.Name()), true
 		}
 	}
 	return "", false
 }
 
-func UploadFile(path string, file multipart.File) error {
-	destination, err := os.Create(path)
-	if err != nil {
-		return err
-	}
-	defer destination.Close()
-	_, err = io.Copy(destination, file)
-	if err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func GetUploadFolder(config config.AppConfig, article string, filename string) (string, error) {
+func GetUploadFolder(config config.AppConfig, article string) (string, error) {
 	uploadFolder := config.UploadFolder
 	if uploadFolder == "" {
 		uploadFolder = "img"
@@ -110,13 +123,22 @@ func GetUploadFolder(config config.AppConfig, article string, filename string) (
 	if err != nil {
 		return "", err
 	}
-	destinationPath := filepath.Join(uploadFolder, fmt.Sprintf("%v_%v%v", article, time.Now().UnixNano(), filepath.Ext(filename)))
+	return uploadFolder, nil
+}
+
+func GetUploadPath(config config.AppConfig, article string, filename string, count int) (string, error) {
+	uploadFolder, err := GetUploadFolder(config, article)
+	if err != nil {
+		return "", err
+	}
+	destinationPath := filepath.Join(uploadFolder, fmt.Sprintf("%v_%v_%v%v", article, time.Now().Format("20060102150405"), count, filepath.Ext(filename)))
+
 	return destinationPath, nil
 }
 
 func GetFilePathWithSubstring(config config.AppConfig, number string, subpath string) (string, error) {
 	path := filepath.Join(config.Path, number[:1], number[1:3], number[3:5], number[5:7], subpath)
-	if !exists(path) {
+	if !Exists(path) {
 		return "", fmt.Errorf("path %v does not exist or can't be accessed", path)
 	}
 
@@ -126,7 +148,7 @@ func GetFilePathWithSubstring(config config.AppConfig, number string, subpath st
 func GetFilePath(config config.AppConfig, number string) (string, error) {
 
 	path := filepath.Join(config.Path, number[:1], number[1:3], number[3:5], number[5:7])
-	if !exists(path) {
+	if !Exists(path) {
 		return "", fmt.Errorf("path %v does not exist or can't be accessed", path)
 	}
 
@@ -139,7 +161,7 @@ func getRelativePath(config config.AppConfig, article string, path string, file 
 	if err != nil {
 		return "", err
 	}
-	return strings.Replace(fullPath, rootPath, "", 1), nil
+	return filepath.Rel(rootPath, fullPath)
 }
 
 func ReadCsv(path string, handler func([]string)) error {
@@ -161,7 +183,7 @@ func ReadCsv(path string, handler func([]string)) error {
 	return scanner.Err()
 }
 
-func exists(path string) bool {
+func Exists(path string) bool {
 	_, err := os.Stat(path)
 	if err == nil {
 		return true
@@ -170,4 +192,24 @@ func exists(path string) bool {
 		return false
 	}
 	return false
+}
+
+func Copy(src, dst string) error {
+	in, err := os.Open(src)
+	if err != nil {
+		return err
+	}
+	defer in.Close()
+
+	out, err := os.Create(dst)
+	if err != nil {
+		return err
+	}
+	defer out.Close()
+
+	_, err = io.Copy(out, in)
+	if err != nil {
+		return err
+	}
+	return out.Close()
 }
