# shared/article/api.yaml
@@ -48,8 +48,8 @@ paths:
   "/article/{number}/file":
     post:
       security: []
-      summary: uploads a new file to the specified article
-      operationId: "uploadFile"
+      summary: uploads new files to the specified article
+      operationId: "uploadFiles"
       parameters:
         - name: number
           in: path
@@ -62,13 +62,15 @@ paths:
             schema:
               type: object
               properties:
-                photo:
-                  type: string
-                  format: binary
+                attachments:
+                  type: array
+                  items:
+                    type: string
+                    format: binary
     get:
       security: []
-      summary: get the default file for the article
-      operationId: "getArticleFile"
+      summary: get the default files for the article
+      operationId: "getArticleFiles"
       parameters:
         - name: number
           in: path
@@ -76,17 +78,11 @@ paths:
             type: string
       responses:
         200:
-          description: the default file
-          headers:
-            cache-control:
-              description: the max length this content is valid
-              schema:
-                type: string
+          description: the default files of the article
           content:
-            application/pdf:
+            application/json:
               schema:
-                type: string
-                format: binary
+                $ref: "#/components/schemas/Article"
         404:
           description: the article or file was not found
   "/article/{number}/file/{path}":
